--- a/index.Rmd
+++ b/index.Rmd
@@ -7,12 +7,7 @@ documentclass: book
 bibliography: [book.bib, packages.bib]
 # url: your book url like https://bookdown.org/yihui/bookdown
 # cover-image: path to the social sharing image like images/cover.jpg
-description: |
-  This is a minimal example of using the bookdown package to write a book.
-  The HTML output format for this example is bookdown::gitbook,
-  set in the _output.yml file.
 link-citations: yes
-github-repo: rstudio/bookdown-demo
 ---
 
 # Sissejuhatus
@@ -21,7 +16,7 @@ Siia on koondatud õppematerjalid kursusele "Kvantitatiivne andmeanalüüs II".
 
 
 
-```{r eval=FALSE}
+```{r eval=FALSE, include=FALSE}
 bookdown::serve_book()
 ```
 
