--- a/02-logit.Rmd
+++ b/02-logit.Rmd
@@ -27,7 +27,7 @@ cols <- wes_palette(5, name="Cavalcanti1", type = "discrete")[c(5,2,3,4,1)]
 Logistilise regressiooniga (logit-mudeliga) saame hinnata sõltumatute tunnuste mõju binaarsele sõltuvale tunnusele (töötav/töötu, käis valimas/ei käinud valimas, surnud/ei ole surnud). Teisisõnu, hindame tõenäosust mingi sündmuse toimumiseks (*success*/*failure*).  Sõltuva tunnuse $y$ jaotus on määratletud kui sündmuse toimumise tõenäosus $P(Y=1)=\pi$.  
 Tavalise regressiooni mudel oli väljendatav kui $\bar{y}=\beta_0+\beta_p x_p$. Miks me ei võiks pidevtunnuselise $y$ keskmist asendada $\pi$'ga: $\bar{\pi}=\beta_0+\beta_k x_k$? Aga sellepärast, et tõenäosus on piiritletud $0$ ja $1$'ga, samas kui lineaarne funktsioon hõlmab kõiki reaalarvulisi väärtusi. Seega on ülimalt tõenäoline, et mingite $x$'i väärtuste puhul on prognoositav $y$ väärtus suurem kui $1$ või väiksem kui $0$. Lisaks tekivad probleemid jääkide struktuuriga (tavaline regressioon eeldab normaaljaotust) ja jääkide dispersiooniga (tavaline regressioon eeldab konstantset hajuvust).
 
-```{r glm-1, fig.cap = "Lineaarse regressiooni kasutamine binaarse sõltuva tunnusega", cache=TRUE, echo=F, warning=F}
+```{r glm-1, fig.cap = "Lineaarse regressiooni kasutamine binaarse sõltuva tunnusega",  echo=F, warning=F}
 set.seed(669)
 x1 = rnorm(50)           
 x2 = rbinom(50, 1, 0.5)
@@ -55,7 +55,7 @@ $$\text{šansid}=\frac{p}{(1-p)}$$
 
 Näiteks kulli ja kirja viskamisel on kulli saamise šanss $\frac{0.5}{(1-0.5)}=1$. Šanss võtta kaardipakist ruutu on $\frac{0.25}{(1-0.25)}=\frac{1}{3}=0.33$. 
 
-```{r odds, fig.cap = "Šansside ja tõenäosuse suhe", cache=TRUE, echo=F, warning=F}
+```{r odds, fig.cap = "Šansside ja tõenäosuse suhe",  echo=F, warning=F}
 data.frame(p <- runif(1000), odds <- p/(1-p)) %>% 
   ggplot(aes(p, odds))+
   geom_line(color=cols[2])+
@@ -73,7 +73,7 @@ Kuid tõenäosuse alumine piir jääb sel juhul ikkagi ette. Ka šansid on altpo
 
 $$\text{logit}=\log \bigg(\frac{p}{(1-p)}\bigg)$$
 
-```{r glm-3, fig.cap = "Logit-i ja tõenäosuse suhe", cache=TRUE, echo=F, warning=F}
+```{r glm-3, fig.cap = "Logit-i ja tõenäosuse suhe",  echo=F, warning=F}
 data.frame(p <- runif(1000), odds <- p/(1-p), logit=log(odds)) %>% 
   ggplot(aes(p, logit))+
   geom_line(color=cols[2])+
@@ -98,7 +98,7 @@ või hoopis nii:
 
 $$\pi_i=Pr(Y_i=1|X_i=x_i)=\frac{1}{1+e^{-\beta_0-\beta_1 x_i}}$$
 
-```{r glm-2, fig.cap = "Logistiline regressioon võrdluses lineaarse regressiooniga", cache=TRUE, echo=F, warning=F}
+```{r glm-2, fig.cap = "Logistiline regressioon võrdluses lineaarse regressiooniga",  echo=F, warning=F}
 set.seed(669)
 x1 = rnorm(50)           
 x2 = rbinom(50, 1, 0.5)
