--- a/01-regressioon.Rmd
+++ b/01-regressioon.Rmd
@@ -91,12 +91,12 @@ piaac %>%
 Kui me teame regressioonisirge tõusu ehk regressioonikoefitsienti ja vabaliiget, siis lähtuvalt sõltumatu tunnuse väärtustest saame prognoosida sõltuva tunnuse väärtuse: 
 
 \begin{equation}
-\hat{y}_i=b_0+b_1x_i
+  \hat{y}_i=b_0+b_1x_i
 \end{equation}
 
 $\hat{y}_i$ antud võrrandis tähistab hinnatud või prognoositud $y$ väärtust (sellest ka see müts $y$ peal) vaatlusele $i$. Kui meil on regressioonivõrrand $\hat{y}_i=-140+3.6x_i$ ja meil on mingi vaatlus $i$, kelle $x$ väärtus on näiteks $200$, siis saame sellele vaatlusele prognoosida $y$ väärtuseks $-140+3.6\times200=580$. Ehk siis inimesel, kelle matemaatilise kirjaoskuse skoor on 200, peaks meie mudeli järgi sissetulek olema *ca* 580 eurot. Inimesel, kelle matemaatilise kirjaoskuse skoor on 400, peaks sissetulek olema keskmiselt $-140+3.6\times400=1300$ eurot
 
-```{r reg-plot-4, fig.cap = "Prognoosimine y väärtust kui x on 200",  echo=F, warning=F}
+```{r reg-plot-4, fig.cap = "Prognoosime y väärtust kui x on 200 ja kui x = 400",  echo=F, warning=F}
 
 ggplot(data=data.frame(x=c(200, 400), y=c(580, 1300)), aes(x=x, y=y)) + 
   geom_point()+
@@ -147,10 +147,10 @@ ggplot(dt, aes(x = x, y = y)) +
 Ehk siis iga kord, kui prognoosime $\hat{y}_i=\beta_0+\beta_1x_i$ abil $y_i$ väärtust, teeme me mingi vea^[Mida saab väljendada kui $\epsilon_i=y_i-\hat{y}_i$]. Seetõttu tuleb regressioonivõrrandile lisada vea komponent ($\epsilon$) ning võrrand ise muutub vastavalt:
 
 \begin{equation}
-\hat{y_i}=\beta_0+\beta x_i+\epsilon
+  \hat{y_i}=\beta_0+\beta x_i+\epsilon
 \end{equation}
 
-Kõige parem regressioonisirge annab joon, mille puhul jäägid on minimaalsed, ehk siis joon, mille puhul kõikide vaatluste jääkide summa oleks võimalikult väike. Kuna me ei saa jääke kokku võtta neid lihtsa kokku liites (*ca* pooled jäägid on väiksemad kui regressioonijoon ja *ca* pooled suuremad, seega nende summa oleks $0$), siis tuleb nad enne liitmist ruutu panna. Ja meie eesmärgiks on nüüd leida regressioonisirge, mis minimeeriks **ruutjääkide summa** (*residual sum of squares* ehk $RSS$) ehk siis regressioonisirge, mille puhul $RSS$ oleks võimalikult väike^[$RSS= = e_1^2 + e_2^2 + ... + e_n = \sum_{i=1}^{n}(y_i-\hat{y}_i)^2$].
+Kõige parem regressioonisirge annab joon, mille puhul jäägid on minimaalsed, ehk siis joon, mille puhul kõikide vaatluste jääkide summa oleks võimalikult väike. Kuna me ei saa jääke kokku võtta neid lihtsalt kokku liites (*ca* pooled jäägid on väiksemad kui regressioonijoon ja *ca* pooled suuremad, seega nende summa oleks $0$), siis tuleb nad enne liitmist ruutu panna. Ja meie eesmärgiks on nüüd leida regressioonisirge, mis minimeeriks **ruutjääkide summa** (*residual sum of squares* ehk $RSS$) ehk siis regressioonisirge, mille puhul $RSS$ oleks võimalikult väike^[$RSS= = e_1^2 + e_2^2 + ... + e_n = \sum_{i=1}^{n}(y_i-\hat{y}_i)^2$].
 
 Eelnevast lähtuvalt on ka küllaltki loogiline, et meetodit, millega $RSS$ minimeeritakse ja regressioonisirge ning vastavad koefitsiendid leitakse, nimetatakse **vähimruutude meetodiks**. 
 
@@ -163,9 +163,6 @@ Eelnevast lähtuvalt on ka küllaltki loogiline, et meetodit, millega $RSS$ mini
 * Kasutades `geom_abline()`'i, lisage joonisele lineaarne regressioonijoon (seega peate eelnevalt `lm()` funktsiooniga leidma regressioonijoone vabaliikme ja regressioonikoefitsiendi)
 :::
 
-
-
-\color{black}
 
 
 ## Regressioonimudeli sobitumine
@@ -239,15 +236,15 @@ $$TSS=RSS+ESS$$
 \marginnote{
 
 \begin{equation}
-ESS=\sum_{i=1}^{n}(\hat{y}_i-\bar{y})^2
+  ESS=\sum_{i=1}^{n}(\hat{y}_i-\bar{y})^2
 \end{equation}
 
 \begin{equation}
-RSS=\sum_{i=1}^{n}(y_i-\hat{y}_i)^2
+  RSS=\sum_{i=1}^{n}(y_i-\hat{y}_i)^2
 \end{equation}
 
 \begin{equation}
-TSS=\sum_{i=1}^{n}(y_i-\bar{y})^2
+  TSS=\sum_{i=1}^{n}(y_i-\bar{y})^2
 \end{equation}
 
 }
@@ -255,7 +252,7 @@ TSS=\sum_{i=1}^{n}(y_i-\bar{y})^2
 Teades erinevaid variatiivsuse komponente, saame määrata kui suur osa (mitu protsenti) sõltuva tunnuse koguvariatsioonist on seletatav regressioonijoone poolt (ehk siis sõltumatu tunnuse poolt). Seda suurust nimetatakse **determinatsioonikordajaks** ehk lühidalt $R^2$-ks. 
 
 \begin{equation}
-R^2=\frac{TSS-RSS}{TSS}=1-\frac{RSS}{TSS}
+  R^2=\frac{TSS-RSS}{TSS}=1-\frac{RSS}{TSS}
 \end{equation}
 
 ```{r ss, fig.cap = "Variatsiivsuse jagunemine",  echo=F, warning=F}
@@ -365,10 +362,10 @@ Meil on tunnus  $x$ (sugu) kahe kategooriaga. Mis juhtub, kui kodeerime selle ü
 
 Kui me selle tunnuse nüüd regressioonivõrrandisse paneme, siis mis on $y_i$ väärtus kui $x_i$ on $1$ (ehk siis vaatluse sugu on naine) ja mis on $y_i$ väärtus kui $x_i$ on $0$ (ehk siis vaatluse sugu on mees)? 
 
-\[ \hat{y_i}=\beta_0+\beta_1 x_i+\epsilon =
+\[ \hat{y_i}=\beta_0+\beta_1 x_i =
   \begin{cases}
-    \beta_0+\beta_1 \times 1 = \beta_0+\beta_1  & \quad \text{kui on naine}\\
-    \beta_0+\beta_1 \times 0 = \beta_0  & \quad \text{kui on mees}
+    \beta_0+(\beta_1 \times 1) = \beta_0+\beta_1  & \quad \text{kui on naine}\\
+    \beta_0+(\beta_1 \times 0) = \beta_0  & \quad \text{kui on mees}
   \end{cases}
 \]  
 
@@ -383,20 +380,42 @@ out <- capture.output(summary(mudel2))
 cat(out[9:12], sep = "\n")
 ```
 
-*Sugu* oli tekstiline tunnus. R saab aru, et tegemist on kategoriaalse tunnusega ja kodeerib selle sisemiselt ümber $0$-ks ja $1$-ks. Antud juhul määras ta kategooria *Naine* $1$-ks ja kategooria *Mees* $0$-ks. Kuna tegemist oli tekstilise tunnusega, siis lähtub R siin tähestikulisest järjekorrast. Regressioonivõrrand oli järgmine:
+*Sugu* oli tekstiline tunnus. R saab aru, et tegemist on kategoriaalse tunnusega ja kodeerib selle sisemiselt ümber $0$-ks ja $1$-ks. Antud juhul määras ta kategooria *Naine* $1$-ks ja kategooria *Mees* $0$-ks. Kuna tegemist oli tekstilise tunnusega, siis lähtub R siin tähestikulisest järjekorrast. Ümberkodeeritud (dihhotomiseeritud) tunnuse nimeks on alati mitte-referentskategooria. Antud juhul siis *suguNaine*. Regressioonivõrrand oli järgmine:
 
 \begin{equation}
 \hat{y_i}=\beta_0+\beta x_i+\epsilon
 \end{equation}
 
+kus
+
+$$
+x_{i} =
+  \begin{cases}
+    1  & \quad \text{kui on naine}\\
+    0  & \quad \text{kui on mees}
+  \end{cases}
+$$
+
 Paneme mudeli tulemused sellesse võrrandisse:
 
-\[ \text{numeracy}=1077.90+(-383.15)\times \text{naine} =
+$\begin{align}
+\text{keskmine sissetulek}&=1077.90+(-383.15)\times \text{naine}\\
+&=
   \begin{cases}
-    1077.90-383.15\times 1 = 1077.90-383.15 = 694.75  & \quad \text{kui on naine}\\
-    1077.90-383.15\times 0 = 1077.90  & \quad \text{kui on mees}
+    1077.90-383.15\times 1 && \quad \text{kui on naine}\\
+    1077.90-383.15\times 0 && \quad \text{kui on mees}
+  \end{cases}\\
+&=
+  \begin{cases}
+    1077.90-383.15 && \quad \text{kui on naine}\\
+    1077.90-0 && \quad \text{kui on mees}
+  \end{cases}\\
+&=
+  \begin{cases}
+    694.75 && \quad \text{kui on naine}\\
+    1077.90 && \quad \text{kui on mees}
   \end{cases}
-\]  
+\end{align}$
 
 Ehk siis naiste keskmine sissetulek on $694.8$ eurot (vabaliige + regressioonikoefitsient) ja meeste oma $1077.9$ eurot (vabaliige). Erinevus on statistiliselt oluline, kuna *p*-väärtused nii koefitsiendi *t*-testi kui ka mudeli *F*-testi puhul olid olulisusnivool $95\%$ olulised (väiksemad kui $0.05$).
 
@@ -433,15 +452,25 @@ Kusjuures me ei pea piirduma vaid binaarsete tunnustega. Aga kui kategooriaid on
 
 Nüüd saame iga inimese hariduse määratleda kahe tunnuse kaudu. Ehk siis inimene, kelle puhul $kesk = 1$ ja $korg = 0$, on keskharidusega; inimene kelle puhul $kesk = 0$ ja $korg = 1$, on kõrgharidusega ja inimene kelle puhul $keks = 0$ ja $korg = 0$, on põhiharidusega. $y$ väärtus kujuneb täpselt samamoodi nagu binaarse tunnuse puhul:
 
-$$y_i=\beta_0+\beta_1 \times kesk_i+\beta_2 \times korg_i+\epsilon_i =$$
 
-\[ =
+$$y_i=\beta_0+\beta_1 \times kesk_i+\beta_2 \times korg_i$$
+
+
+$\begin{align}
+&=
   \begin{cases}
-    \beta_0+\beta_1 \times 1+\beta_2 \times 0 = \beta_0+\beta_1  & \quad \text{kui inimene on keskharidusega}\\
-    \beta_0+\beta_1 \times 0+\beta_2 \times 1 = \beta_0+\beta_2  & \quad \text{kui inimene on kõrgaridusega}\\
-    \beta_0+\beta_1 \times 0+\beta_2 \times 0 = \beta_0  & \quad \text{kui inimene on põhiharidusega}
+    \beta_0+\beta_1 \times 1+\beta_2 \times 0  & \quad \text{keskharidusega}\\
+    \beta_0+\beta_1 \times 0+\beta_2 \times 1  & \quad \text{kõrgaridusega}\\
+    \beta_0+\beta_1 \times 0+\beta_2 \times 0  & \quad \text{põhiharidusega}
+  \end{cases}\\
+&=
+  \begin{cases}
+    \beta_0+\beta_1  & \quad \text{keskharidusega}\\
+    \beta_0+\beta_2  & \quad \text{kõrgaridusega}\\
+    \beta_0  & \quad \text{põhiharidusega}
   \end{cases}
-\]
+\end{align}$
+
 
 Vaatame kuidas see kõik R-is välja näeb. Hindame hariduse (tunnus *haridustase*) mõju sissetulekule:
 
@@ -455,15 +484,29 @@ R sai jällegi ise aru, et *haridustase* on tekstiline tunnus ja dihotomiseeris 
 Tulemuste interpreteerimine toimub samamoodi nagu binaarse tunnuse puhul. Vabaliige tähistab referentskategooria, ehk antud juhul keskmise haridustasemega inimeste, keskmistsissetulekut ($763.35$), *haridustaseKõrge* regressioonikordaja tähistab kõrge haridustasemega inimeste skoori erinevust referentskategooria keskmisest (vabaliikmest) ja *haridustaseMadal* madala haridustasemega inimeste skoori erinevust referentskategooria keskmisest (vabaliikmest).
 
 Võrrandi kujul näeb tulem välja järgmine:
-$$y_i=\beta_0+\beta_1 \times korge_i+\beta_2 \times madal_i+\epsilon_i =$$
+$$y_i=\beta_0+\beta_1 \times korge_i+\beta_2 \times madal_i$$
 
-\[ =
+$\begin{align}
+&=
   \begin{cases}
-    763.35+217.23 \times 1+(-22.20) \times 0 = 763.35+217.23  & \quad \text{kui inimene on kõrge haridustasemega}\\
-    763.35+217.23 \times 0+(-22.20) \times 1 = 763.35-22.20  & \quad \text{kui inimene on madala haridustasemega}\\
-    763.35+217.23 \times 0+(-22.20) \times 0 = 763.35  & \quad \text{kui inimene on keskmise haridustasemega}
+    763.35+217.23 \times 1+(-22.20) \times 0 & \quad \text{kõrge haridustase}\\
+    763.35+217.23 \times 0+(-22.20) \times 1 & \quad \text{madal haridustase}\\
+    763.35+217.23 \times 0+(-22.20) \times 0 & \quad \text{keskmine haridustase}
+  \end{cases}\\
+&=
+  \begin{cases}
+    763.35+217.23+0  & \quad \text{kõrge haridustase}\\
+    763.35+0-22.20  & \quad \text{madal haridustase}\\
+    763.35+0+0  & \quad \text{keskmine haridustase}
+  \end{cases}\\
+&=
+  \begin{cases}
+    980.58  & \quad \text{kõrge haridustase}\\
+    741.15  & \quad \text{madal haridustase}\\
+    763.35  & \quad \text{keskmine haridustase}
   \end{cases}
-\]
+\end{align}$
+
 
 Kui kategoriaalne sõltumatu tunnus on tekstiline (*character*), siis valib R referentskategooriaks tähestikuliselt esimese kategooria. Kui tunnus on faktortunnus (*factor*), siis valib R esimese faktortaseme. Faktortasemeid saame me aga muuta. Tihti tahame referentskategooria ise valida (näiteks kõige suurema grupi või grupi, mida on loogiline teistega võrrelda). Näiteks tahame haridustasemete puhul määrata referentskategooriaks põhihariduse. Selleks teeme tunnuse faktoriks ja määrame tasemete järjestuse nii, et madal haridustase oleks esimene:
 
@@ -545,23 +588,52 @@ summary(mudel4)
 
 Mitmese regressiooni tõlgendus on analoogne lihtsa regressiooni tõlgendusega. Võrrandi kujul on see väljendatav järgmiselt:
 
-$$\hat{y}_{sissetulek}=\beta_0+\beta_1 \times numeracy + \beta_2 \times sugu  =$$
+$$\hat{y}_{sissetulek}=\beta_0+\beta_1 \times numeracy + \beta_2 \times naine$$
 
-\[ =
+$\begin{align}
+&=
   \begin{cases}
-    \beta_0+\beta_1 \times numeracy + \beta_2 \times 1 = (\beta_0+\beta_2)+\beta_1 \times numeracy  & \quad \text{naiste puhul}\\
-    \beta_0+\beta_1 \times numeracy + \beta_2 \times 0 = \beta_0+\beta_1 \times lnumeracy & \quad \text{meeste puhul}
-  \end{cases}
-\]
-
-\[ =
+    \beta_0+\beta_1 \times numeracy + \beta_2 \times 1 =  & \quad \text{naine}\\
+    \beta_0+\beta_1 \times numeracy + \beta_2 \times 0 =  & \quad \text{mees}
+  \end{cases}\\
+&=
   \begin{cases}
-    140.8+3.35 \times numeracy + (-365) \times 1 = (140.8-365)+3.35 \times numeracy  & \quad \text{naiste puhul}\\
-    140.8+3.35 \times numeracy + (-365) \times 0 = 140.8+3.35 \times numeracy & \quad \text{meeste puhul}
-  \end{cases}
-\]
+    (\beta_0+\beta_2)+\beta_1 \times numeracy  & \quad \text{naine}\\
+    \beta_0+\beta_1 \times numeracy & \quad \text{mees}
+  \end{cases}\\
+\end{align}$
 
-Vabaliige näitab kategoriaalse tunnuse referentskategooria (antud juhul mees) keskmist sõltuva tunnuse väärtust. Aga kuna nüüd on meil mudelis ka sõltumatu pidevtunnus, siis on see referentskatekooria keskmine juhul, kui sõltumatu pidevtunnus on $0$. Ehk siis meie näite puhul tähistab vabaliige ($140.8$) meeste sissetulekut juhul kui nende matemaatilise kirjaoskuse skoor on $0$. *suguNaine* regressioonikordaja näitab naiste sissetuleku erinevust meestest. See võtab arvesse ka matemaatilise kirjaoskuse skoori. Ehk siis kõikide matemaatilise kirjaoskuse väärtuste puhul on on naiste sissetulek $365$ eurot meestest madalam (st soo mõju on kontrollitud matemaatilise kirjaoskuse suhtes). *numeracy* regressioonikordaja näitab jällegi sissetuleku muutust ($3.35$) kui matemaatiline kirjaoskus muutub ühe ühiku võrra. Kuna ka sugu on mudelis arvesse võetud, kehtib see muutus võrdselt nii naitsele kui meestele (mõju on kontrollitud soo suhtes).  
+
+
+Vabaliige näitab kategoriaalse tunnuse referentskategooria (antud juhul mees) keskmist sõltuva tunnuse väärtust. Aga kuna nüüd on meil mudelis ka sõltumatu pidevtunnus, siis on see referentskategooria keskmine juhul, kui sõltumatu pidevtunnus on $0$. Ehk siis meie näite puhul tähistab vabaliige ($140.8$) meeste sissetulekut juhul kui nende matemaatilise kirjaoskuse skoor on $0$. *suguNaine* regressioonikordaja näitab naiste sissetuleku erinevust meestest. See võtab arvesse ka matemaatilise kirjaoskuse skoori. Ehk siis kõikide matemaatilise kirjaoskuse väärtuste puhul on on naiste sissetulek $365$ eurot meestest madalam (st soo mõju on kontrollitud matemaatilise kirjaoskuse suhtes). *numeracy* regressioonikordaja näitab jällegi sissetuleku muutust ($3.35$) kui matemaatiline kirjaoskus muutub ühe ühiku võrra. Kuna ka sugu on mudelis arvesse võetud, kehtib see muutus võrdselt nii naistele kui meestele (mõju on kontrollitud soo suhtes).  
+
+Vaatame, milliseks kujunevad mudeli järgi meeste ja naiste keskmised sissetulekud, kui nende *numeracy* skoor on 300 
+
+$$\hat{y}_{sissetulek}=140.8+3.35 \times numeracy + (-365) \times naine$$
+
+$\begin{align}
+&=
+  \begin{cases}
+    140.8+3.35 \times 300 + (-365) \times 1 =  & \quad \text{naine}\\
+    140.8+3.35 \times 300 + (-365) \times 0 =  & \quad \text{mees}
+  \end{cases}\\
+&=
+  \begin{cases}
+    (140.8-365)+3.35 \times 300  & \quad \text{naine}\\
+    140.8+3.35 \times 300 & \quad \text{mees}
+  \end{cases}\\
+&=
+  \begin{cases}
+    -224.2+1005  & \quad \text{naine}\\
+    140.8+1005 & \quad \text{mees}
+  \end{cases}\\
+&=
+  \begin{cases}
+    780.8  & \quad \text{naine}\\
+    1145.8 & \quad \text{mees}
+  \end{cases}
+\end{align}$
+
 
 Mõnevõrra lihtsam on seda tulemust interpreteerida graafiliselt: 
 
@@ -623,15 +695,22 @@ Eelnevas näites vaatasime sissetuleku sõltuvust matemaatilise kirjaoskuse tase
 Kui me arvame, et see võib nii olla, st sõltumatu tunnuse mõju sõltuvale tunnusele sõltub omakorda mingist muust tunnusest, saame mudelisse lisada nende kahe tunnuse koosmõju (interaktsiooni). Selleks peame moodustame uue tunnuse, mis tuleneb nende tunnuste, mille suhtes me koosmõju hinnata tahame, korrutisest. Kui me nüüd selle uue tunnuse mudelisse kaasame, siis hindame sellele ka regressioonikoefitsiendi. Regressioonivõrrand pidevtunnuse ja kategoriaalse tunnuse koosmõjuga näeks välja nii:
 
 
-$$\hat{y}_{sissetulek}=\beta_0+\beta_1 \times numeracy + \beta_2 \times naine + \beta_3 \times naine \times numeracy =$$
+$$\hat{y}_{sissetulek}=\beta_0+\beta_1 \times numeracy + \beta_2 \times naine + \beta_3 \times naine \times numeracy $$
 
-\[ 
-=
+$\begin{align}
+&=
   \begin{cases}
-    \beta_0+\beta_1 \times numeracy + \beta_2 \times 1 + \beta_3 \times 1 \times numeracy = (\beta_0+\beta_2)+(\beta_1+\beta_3) \times numeracy  & \quad \text{naised}\\
-    \beta_0+\beta_1 \times numeracy + \beta_2 \times 0 + \beta_3 \times 0 \times numeracy = \beta_0+\beta_1 \times numeracy & \quad \text{mehed}
+    \beta_0+\beta_1 \times numeracy + \beta_2 \times 1 + \beta_3 \times 1 \times numeracy  & \quad \text{naised}\\
+    \beta_0+\beta_1 \times numeracy + \beta_2 \times 0 + \beta_3 \times 0 \times numeracy & \quad \text{mehed}
+  \end{cases}\\
+&=
+  \begin{cases}
+    (\beta_0+\beta_2)+(\beta_1+\beta_3) \times numeracy  & \quad \text{naised}\\
+    \beta_0+\beta_1 \times numeracy & \quad \text{mehed}
   \end{cases}
-\]
+\end{align}$
+
+Mis siin nüüd siis toimub? Meeste keskmine sissetulek on, nagu varasemaltki, defineeritud vabaliikme ja $\beta_1$ regressioonikoefitsiendiga (ülejäänud kaks koefitsienti lähevad meeste jaoks $0$-ks, kuna *naine* tunnus on nende jaoks $0$). Naistel on aga lisaks veel kaks koefitsienti. $\beta_2$, mis nagu varasemaltki kirjeldab naiste vabaliikme erinevust meeste vabaliikmest, ning siis veel $\beta_3$, mis kirjeldab naiste regressioonisirge erinevust meeste regressioonisirgest. Koosmõjudega mudelis on naiste *numeracy* koefitsient $\beta_1+\beta_3$ (sest $\beta_1 \times numeracy + \beta_3 \times numeracy = (\beta_1+\beta_3) \times numeracy$).
 
 R-is saame taolise mudeli defineerida järgmiselt:
 
@@ -646,15 +725,25 @@ summary(mudel8)
 
 Koosmõjudega mudeli vabaliikmed ja regressioonikoefitsiendid kujunevad järgmiselt:
 
-$$\hat{y}_{sissetulek}=\beta_0+\beta_1 \times numeracy + \beta_2 \times naine + \beta_3 \times naine \times numeracy =$$
+$$\hat{y}_{sissetulek}=\beta_0+\beta_1 \times numeracy + \beta_2 \times naine + \beta_3 \times naine \times numeracy$$
 
-\[ 
-=
+$\begin{align}
+&=
   \begin{cases}
-    28.5+3.8 \times numeracy + (-157) \times 1 + (-0.7) \times 1 \times numeracy = (28.5-157)+(3.8-0.7) \times numeracy  & \quad \text{naised}\\
-    28.5+3.8 \times numeracy + (-157) \times 0 + (-0.7) \times 0 \times numeracy = 28.5+3.8 \times numeracy & \quad \text{mehed}
+    28.5+3.8 \times numeracy + (-157) \times 1 + (-0.7) \times 1 \times numeracy & \quad \text{naised}\\
+    28.5+3.8 \times numeracy + (-157) \times 0 + (-0.7) \times 0 \times numeracy & \quad \text{mehed}
+  \end{cases}\\
+&=
+  \begin{cases}
+    (28.5-157)+(3.8-0.7) \times numeracy  & \quad \text{naised}\\
+    28.5+3.8 \times numeracy & \quad \text{mehed}
+  \end{cases}\\
+&=
+  \begin{cases}
+    -128.5+3.1 \times numeracy  & \quad \text{naised}\\
+    28.5+3.8 \times numeracy & \quad \text{mehed}
   \end{cases}
-\]
+\end{align}$
 
 Seega selles mudelis erinevad kategoriaalse tunnuse lõikes nii vabaliikme väärtused kui ka regressioonisirge tõusud. Kui me nüüd selle mudeli tulemused graafikule paneme, siis näeme, et regressioonisirged ei ole enam paralleelsed. Mida suurem on matemaatilise kirjaoskuse tase, seda suurem on erinevus meeste ja naiste sissetulekutes.
 
@@ -672,27 +761,30 @@ mudel9 <- lm(sissetulek ~ sugu * haridustase, data = piaac)
 summary(mudel9)
 ```
 
-Sellisest mudelist saame välja lugeda kõikide gruppide ristlõigete (kõrge haridustasemega naised, kõrge haridustasemega mehed jne) keskmised. Arvutame näiteks välja kõrge haridustasemega naiste ja madala haridustasemega meeste keskmised matemaatilise lugemisoskuse skoorid:
+Sellisest mudelist saame välja lugeda kõikide gruppide ristlõigete (kõrge haridustasemega naised, kõrge haridustasemega mehed jne) keskmised. Arvutame näiteks välja kõrge haridustasemega (*koh*) naiste ja madala haridustasemega (*mh*) meeste keskmised matemaatilise lugemisoskuse skoorid:
 
-$$\hat{y}_{sissetulek}=\beta_0+\beta_1 \times naine + \beta_2 \times korge + \beta_3 \times madal + \beta4 \times nainekorge + \beta_5 \times nainemadal =$$
+$$\hat{y}_{sissetulek}=\beta_0+\beta_1 \times naine + \beta_2 \times koh + \beta_3 \times mh + \beta_4 \times naine \times koh + \beta_5 \times naine \times mh$$
 
-\[ 
-=
+$\begin{align}
+&=
   \begin{cases}
-    1004.5+(-458.8) \times 1 + 252.60 \times 1 + (-73.55) \times 0 + 50.69 \times 1 + 10.76 \times 0 = & \quad \text{kõrge haridustasemega naised}\\
-    1004.5+(-458.8) \times 0 + 252.60 \times 0 + (-73.55) \times 1 + 50.69 \times 0 + 10.76 \times 0 = & \quad \text{madala haridustasemega mehed}
-  \end{cases}
-\]
-
-\[ 
-=
+    1004.5+(-458.8) \times 1 + 252.60 \times 1 + (-73.55) \times 0 + 50.69 \times 1 + 10.76 \times 0 & \quad \text{kõrge haridustasemega naised}\\
+    1004.5+(-458.8) \times 0 + 252.60 \times 0 + (-73.55) \times 1 + 50.69 \times 0 + 10.76 \times 0 & \quad \text{madala haridustasemega mehed}
+  \end{cases}\\
+&=
   \begin{cases}
-    1004.5+(-458.8) + 252.60 + 50.69 =  849 & \quad \text{kõrge haridustasemega naised}\\
-    1004.5 + (-73.55) = 931 & \quad \text{madala haridustasemega mehed}
+    1004.5+(-458.8) + 252.60 + 50.69 & \quad \text{kõrge haridustasemega naised}\\
+    1004.5 + (-73.55) & \quad \text{madala haridustasemega mehed}
+  \end{cases}\\
+&=
+  \begin{cases}
+    849 & \quad \text{kõrge haridustasemega naised}\\
+    931 & \quad \text{madala haridustasemega mehed}
   \end{cases}
-\]
+\end{align}$
 
-Vaatame seda mudelit ka graafiliselt (kasutame paketi `jtools` funktsiooni `cat_plot()`):
+
+Vaatame seda mudelit ka graafiliselt (kasutame paketi `interactions` funktsiooni `cat_plot()`):
 
 ```{r}
 cat_plot(mudel9, pred = haridustase, modx = sugu, colors =  c("#972D15", "#02401B"))
@@ -742,7 +834,7 @@ grid.arrange(p1, p2, p3, p4)
 
 2. Lineaarse regressiooni puhul peaks tähelepanelik olema ka **erindite** (*outliers*)suhtes, st vaatluste suhtes, mis erinevad teistest väga olulisel määral (nagu ka kõrvalolevalt jooniselt näha). Mõnede andmete puhul on erindid paratamatud (näiteks sissetuleku puhul, kus suurem osa inimesi on koondunud keskmise sissetuleku ümber, kuid mõned üksikud teenivad sellest oluliselt enam). Sellisel juhul tasuks kaaluda jällegi tunnuse transformeerimist (sissetuleku puhul näiteks log-skaalale). Kui tegemist on mõne üksiku erindiga, võiks ju selle aluseks oleva vaatluse ka lihtsalt analüüsist välja jätta. Siin tuleks aga olla väga ettevaatlik. Andmete või sellest saadava informatsiooni tahtlik vähendamine (näiteks pidevtunnuste kategoriseerimine) ei ole üldiselt kunagi hea mõte. Seda enam ei ole hea mõte andmete vähendamine eesmärgiga mudelit paremaks teha. Kui aga erindite tekkimine on mingil moel teoreetiliselt seletatav või tulenenud näiteks veast andmekorjel, siis võib seda loomulikult teha.  
 
-3. **Jääkide dispersiooni homogeensus** (*homoscedasticity*). Jäägid peaksid hinnatud väärtuste lõikes olema homogeense ja konstantse variatiivsusega, st ühtlaselt jaotunud kõikide $\hat{y}$ väärtuste ümber. Selle eelduse rikkumine mõjutab eelkõige standardvigu (need ei kehti enam kõikidele $\hat{y}$ väärtustele ühtlaselt) ja seeläbi loomulikult ka usalduintervalle ning *p*-väärtusi. Lahenduseks võivad olla nn robustsed standardvead (*robust standard errors*), mis võtavad varieeruvuse erinevust arvesse.
+3. **Jääkide dispersiooni homogeensus** (*homoscedasticity*). Jäägid peaksid hinnatud väärtuste lõikes olema homogeense ja konstantse variatiivsusega, st ühtlaselt jaotunud kõikide $\hat{y}$ väärtuste ümber. Selle eelduse rikkumine mõjutab eelkõige standardvigu (need ei kehti enam kõikidele $\hat{y}$ väärtustele ühtlaselt) ja seeläbi loomulikult ka usaldusintervalle ning *p*-väärtusi. Lahenduseks võivad olla nn robustsed standardvead (*robust standard errors*), mis võtavad varieeruvuse erinevust arvesse.
 
 ```{r, message=F}
 ## Robust standard errors
@@ -788,22 +880,25 @@ mod <- lm(formula = sissetulek ~ numeracy + vanus + sugu + haridustase,
 ```{r, fig.height=4}
 plot(mod, 1)
 ```
+
 Kontrollime mittelineaarse seose olemasolu. Punktid peaksid olema ühtlaselt ümber keskmise joone jaotunud. Ei tohiks olla mingit ilmset mustrit.
 
 ```{r, fig.height=4}
 plot(mod, 2)
 ```
-Kas jäägid on normaalselt jaotunud? Punktid peaksid ühtima diagonaalse joonega.
 
+Kas jäägid on normaalselt jaotunud? Punktid peaksid ühtima diagonaalse joonega.
 
 ```{r, fig.height=4}
 plot(mod, 3)
 ```
+
 Kas jääkide dispersioon on homogeenne? Punane joon peaks olema horisontaalne ja punktid peaksid olema ühtlaselt jaotunud ega tohiks mingit mustrit moodustada.
 
 ```{r, fig.height=4}
 plot(mod, 5)
 ```
+
 Kas mudelis on mudelit oluliselt mõjutavaid erindeid? Kui on, siis peaksid need olema paremal all või paremal üleval nurgas ning kaugemal kui punktiirjoon (antud juhul neid ei ole ja seega ei ole ka punktiirjoont näha).
 
 
