--- a/01-regressioon.Rmd
+++ b/01-regressioon.Rmd
@@ -233,7 +233,6 @@ Vast oluliseimaks mudeli headuse näitajaks on $R^2$. Regressioonanalüüsi eesm
 
 $$TSS=RSS+ESS$$
 
-\marginnote{
 
 \begin{equation}
   ESS=\sum_{i=1}^{n}(\hat{y}_i-\bar{y})^2
@@ -247,7 +246,6 @@ $$TSS=RSS+ESS$$
   TSS=\sum_{i=1}^{n}(y_i-\bar{y})^2
 \end{equation}
 
-}
 
 Teades erinevaid variatiivsuse komponente, saame määrata kui suur osa (mitu protsenti) sõltuva tunnuse koguvariatsioonist on seletatav regressioonijoone poolt (ehk siis sõltumatu tunnuse poolt). Seda suurust nimetatakse **determinatsioonikordajaks** ehk lühidalt $R^2$-ks. 
 
@@ -382,40 +380,38 @@ cat(out[9:12], sep = "\n")
 
 *Sugu* oli tekstiline tunnus. R saab aru, et tegemist on kategoriaalse tunnusega ja kodeerib selle sisemiselt ümber $0$-ks ja $1$-ks. Antud juhul määras ta kategooria *Naine* $1$-ks ja kategooria *Mees* $0$-ks. Kuna tegemist oli tekstilise tunnusega, siis lähtub R siin tähestikulisest järjekorrast. Ümberkodeeritud (dihhotomiseeritud) tunnuse nimeks on alati mitte-referentskategooria. Antud juhul siis *suguNaine*. Regressioonivõrrand oli järgmine:
 
-\begin{equation}
-\hat{y_i}=\beta_0+\beta x_i+\epsilon
-\end{equation}
+\[\hat{y_i}=\beta_0+\beta x_i+\epsilon\]  
 
 kus
 
-$$
+\begin{align}
 x_{i} =
   \begin{cases}
     1  & \quad \text{kui on naine}\\
     0  & \quad \text{kui on mees}
   \end{cases}
-$$
+\end{align}
 
 Paneme mudeli tulemused sellesse võrrandisse:
 
-$\begin{align}
+\begin{align}
 \text{keskmine sissetulek}&=1077.90+(-383.15)\times \text{naine}\\
 &=
   \begin{cases}
-    1077.90-383.15\times 1 && \quad \text{kui on naine}\\
-    1077.90-383.15\times 0 && \quad \text{kui on mees}
+    1077.90-383.15\times 1 & \quad \text{kui on naine}\\
+    1077.90-383.15\times 0 & \quad \text{kui on mees}
   \end{cases}\\
 &=
   \begin{cases}
-    1077.90-383.15 && \quad \text{kui on naine}\\
-    1077.90-0 && \quad \text{kui on mees}
+    1077.90-383.15 & \quad \text{kui on naine}\\
+    1077.90-0 & \quad \text{kui on mees}
   \end{cases}\\
 &=
   \begin{cases}
-    694.75 && \quad \text{kui on naine}\\
-    1077.90 && \quad \text{kui on mees}
+    694.75 & \quad \text{kui on naine}\\
+    1077.90 & \quad \text{kui on mees}
   \end{cases}
-\end{align}$
+\end{align}
 
 Ehk siis naiste keskmine sissetulek on $694.8$ eurot (vabaliige + regressioonikoefitsient) ja meeste oma $1077.9$ eurot (vabaliige). Erinevus on statistiliselt oluline, kuna *p*-väärtused nii koefitsiendi *t*-testi kui ka mudeli *F*-testi puhul olid olulisusnivool $95\%$ olulised (väiksemad kui $0.05$).
 
@@ -456,7 +452,7 @@ Nüüd saame iga inimese hariduse määratleda kahe tunnuse kaudu. Ehk siis inim
 $$y_i=\beta_0+\beta_1 \times kesk_i+\beta_2 \times korg_i$$
 
 
-$\begin{align}
+\begin{align}
 &=
   \begin{cases}
     \beta_0+\beta_1 \times 1+\beta_2 \times 0  & \quad \text{keskharidusega}\\
@@ -469,7 +465,7 @@ $\begin{align}
     \beta_0+\beta_2  & \quad \text{kõrgaridusega}\\
     \beta_0  & \quad \text{põhiharidusega}
   \end{cases}
-\end{align}$
+\end{align}
 
 
 Vaatame kuidas see kõik R-is välja näeb. Hindame hariduse (tunnus *haridustase*) mõju sissetulekule:
@@ -486,7 +482,7 @@ Tulemuste interpreteerimine toimub samamoodi nagu binaarse tunnuse puhul. Vabali
 Võrrandi kujul näeb tulem välja järgmine:
 $$y_i=\beta_0+\beta_1 \times korge_i+\beta_2 \times madal_i$$
 
-$\begin{align}
+\begin{align}
 &=
   \begin{cases}
     763.35+217.23 \times 1+(-22.20) \times 0 & \quad \text{kõrge haridustase}\\
@@ -505,7 +501,7 @@ $\begin{align}
     741.15  & \quad \text{madal haridustase}\\
     763.35  & \quad \text{keskmine haridustase}
   \end{cases}
-\end{align}$
+\end{align}
 
 
 Kui kategoriaalne sõltumatu tunnus on tekstiline (*character*), siis valib R referentskategooriaks tähestikuliselt esimese kategooria. Kui tunnus on faktortunnus (*factor*), siis valib R esimese faktortaseme. Faktortasemeid saame me aga muuta. Tihti tahame referentskategooria ise valida (näiteks kõige suurema grupi või grupi, mida on loogiline teistega võrrelda). Näiteks tahame haridustasemete puhul määrata referentskategooriaks põhihariduse. Selleks teeme tunnuse faktoriks ja määrame tasemete järjestuse nii, et madal haridustase oleks esimene:
@@ -590,7 +586,7 @@ Mitmese regressiooni tõlgendus on analoogne lihtsa regressiooni tõlgendusega. 
 
 $$\hat{y}_{sissetulek}=\beta_0+\beta_1 \times numeracy + \beta_2 \times naine$$
 
-$\begin{align}
+\begin{align}
 &=
   \begin{cases}
     \beta_0+\beta_1 \times numeracy + \beta_2 \times 1 =  & \quad \text{naine}\\
@@ -601,7 +597,7 @@ $\begin{align}
     (\beta_0+\beta_2)+\beta_1 \times numeracy  & \quad \text{naine}\\
     \beta_0+\beta_1 \times numeracy & \quad \text{mees}
   \end{cases}\\
-\end{align}$
+\end{align}
 
 
 
@@ -611,7 +607,7 @@ Vaatame, milliseks kujunevad mudeli järgi meeste ja naiste keskmised sissetulek
 
 $$\hat{y}_{sissetulek}=140.8+3.35 \times numeracy + (-365) \times naine$$
 
-$\begin{align}
+\begin{align}
 &=
   \begin{cases}
     140.8+3.35 \times 300 + (-365) \times 1  & \quad \text{naine}\\
@@ -632,7 +628,7 @@ $\begin{align}
     780.8  & \quad \text{naine}\\
     1145.8 & \quad \text{mees}
   \end{cases}
-\end{align}$
+\end{align}
 
 
 Mõnevõrra lihtsam on seda tulemust interpreteerida graafiliselt: 
@@ -697,7 +693,7 @@ Kui me arvame, et see võib nii olla, st sõltumatu tunnuse mõju sõltuvale tun
 
 $$\hat{y}_{sissetulek}=\beta_0+\beta_1 \times numeracy + \beta_2 \times naine + \beta_3 \times naine \times numeracy $$
 
-$\begin{align}
+\begin{align}
 &=
   \begin{cases}
     \beta_0+\beta_1 \times numeracy + \beta_2 \times 1 + \beta_3 \times 1 \times numeracy  & \quad \text{naised}\\
@@ -708,7 +704,7 @@ $\begin{align}
     (\beta_0+\beta_2)+(\beta_1+\beta_3) \times numeracy  & \quad \text{naised}\\
     \beta_0+\beta_1 \times numeracy & \quad \text{mehed}
   \end{cases}
-\end{align}$
+\end{align}
 
 Mis siin nüüd siis toimub? Meeste keskmine sissetulek on, nagu varasemaltki, defineeritud vabaliikme ja $\beta_1$ regressioonikoefitsiendiga (ülejäänud kaks koefitsienti lähevad meeste jaoks $0$-ks, kuna *naine* tunnus on nende jaoks $0$). Naistel on aga lisaks veel kaks koefitsienti. $\beta_2$, mis nagu varasemaltki kirjeldab naiste vabaliikme erinevust meeste vabaliikmest, ning siis veel $\beta_3$, mis kirjeldab naiste regressioonisirge erinevust meeste regressioonisirgest. Koosmõjudega mudelis on naiste *numeracy* koefitsient $\beta_1+\beta_3$ (sest $\beta_1 \times numeracy + \beta_3 \times numeracy = (\beta_1+\beta_3) \times numeracy$).
 
@@ -727,7 +723,7 @@ Koosmõjudega mudeli vabaliikmed ja regressioonikoefitsiendid kujunevad järgmis
 
 $$\hat{y}_{sissetulek}=\beta_0+\beta_1 \times numeracy + \beta_2 \times naine + \beta_3 \times naine \times numeracy$$
 
-$\begin{align}
+\begin{align}
 &=
   \begin{cases}
     28.5+3.8 \times numeracy + (-157) \times 1 + (-0.7) \times 1 \times numeracy & \quad \text{naised}\\
@@ -743,7 +739,7 @@ $\begin{align}
     -128.5+3.1 \times numeracy  & \quad \text{naised}\\
     28.5+3.8 \times numeracy & \quad \text{mehed}
   \end{cases}
-\end{align}$
+\end{align}
 
 Seega selles mudelis erinevad kategoriaalse tunnuse lõikes nii vabaliikme väärtused kui ka regressioonisirge tõusud. Kui me nüüd selle mudeli tulemused graafikule paneme, siis näeme, et regressioonisirged ei ole enam paralleelsed. Mida suurem on matemaatilise kirjaoskuse tase, seda suurem on erinevus meeste ja naiste sissetulekutes.
 
@@ -765,7 +761,7 @@ Sellisest mudelist saame välja lugeda kõikide gruppide ristlõigete (kõrge ha
 
 $$\hat{y}_{sissetulek}=\beta_0+\beta_1 \times naine + \beta_2 \times koh + \beta_3 \times mh + \beta_4 \times naine \times koh + \beta_5 \times naine \times mh$$
 
-$\begin{align}
+\begin{align}
 &=
   \begin{cases}
     1004.5+(-458.8) \times 1 + 252.60 \times 1 + (-73.55) \times 0 + 50.69 \times 1 + 10.76 \times 0 & \quad \text{kõrge haridustasemega naised}\\
@@ -781,7 +777,7 @@ $\begin{align}
     849 & \quad \text{kõrge haridustasemega naised}\\
     931 & \quad \text{madala haridustasemega mehed}
   \end{cases}
-\end{align}$
+\end{align}
 
 
 Vaatame seda mudelit ka graafiliselt (kasutame paketi `interactions` funktsiooni `cat_plot()`):
